# bank_app

./: .env.example  .gitignore  pyproject.toml
src/: config.py  database.py  dependencies.py  main.py
src/api/: __init__.py  health_check.py
src/utils/: db_manager.py
