[project]
name = "bank-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "ruff>=0.15.22",
    "uvicorn>=0.51.0",
]

[tool.ruff]
line-length = 120
